<resources>
    <string name="app_name">ShareInfo</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_traffic">Traffic Info</string>

    <string name="error_title">Error</string>
    <string name="failed_title">Failed</string>
    <string name="success_title">Success</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>

    <!-- Service Config -->
    <string name="service_config_url" translatable="false">https://share-future.herokuapp.com/configuration/urls</string>

    <!-- Map Fragment -->
    <string name="traffic_info_button">Share/Obtain</string>
    <string name="share_traffic_info_button_text">Share</string>
    <string name="obtain_traffic_info_button_text">Obtain</string>
    <string name="share_location_card_number_text">Car Number:</string>
    <string name="share_location_card_number_hint_text"><font size="12">Please input car number...</font></string>

    <!-- Message -->
    <string name="no_traffic_info_message">No info for the bus.</string>
    <string name="number_of_people_in_bus">%d people</string>
    <string name="user_not_sign_in">Please sign in you account first.</string>

    <!-- Authentication -->
    <string name="sign_in_title">Sign In</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="phone_num">PhoneNumber:</string>
    <string name="password">Password:</string>
    <string name="sign_up_link">No account yet? Create one</string>
    <string name="sign_in_link">Let me sign in</string>
    <string name="phone_num_error_message">Enter a valid phone number</string>
    <string name="password_character_error_message">Between 4 and 10 alphanumeric characters</string>
    <string name="sign_in_error_message">Sign in error. Unknown issue happened.</string>
    <string name="sign_in_failed_message">Sign in failed. Phone number or password error.</string>
    <string name="sign_up_error_message">Sign up error. Unknown issue happened.</string>
    <string name="sign_up_failed_message">Sign up failed. User already exist.</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_account">My Account</string>
    <string name="need_sign_in__dialog_alert">Sorry, please sign in your account first.</string>
    <string name="need_sign_in_fragment_alert">This function do need your sign in first, please take a few second to sign in our app.</string>


    <!-- Me Tab -->
    <string name="me_title">Me</string>

    <!-- Traffic Info -->
    <string name="button_boarding">Boarding</string>
    <string name="button_get_off">Get Off</string>


</resources>
