<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/share_info_operation_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner"
    android:layout_marginBottom="12dp"
    android:visibility="gone">

    <TextView
        android:id="@+id/card_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:text="@string/share_location_card_number_text"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/car_number_input"
        app:layout_constraintRight_toLeftOf="@id/car_number_input"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/share_location_card_number_text" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/car_number_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/share_location_card_number_hint_text"
        android:singleLine="true"
        android:paddingEnd="12dp"
        app:layout_constraintLeft_toRightOf="@id/card_number_text" />

    <Button
        android:id="@+id/share_traffic_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_button_drawable"
        android:layout_marginBottom="@dimen/button_8dp_padding"
        android:text="@string/share_traffic_info_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@id/obtain_traffic_info_button"
        app:layout_constraintEnd_toStartOf="@+id/obtain_traffic_info_button"
        app:layout_constraintLeft_toRightOf="@+id/obtain_traffic_info_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/obtain_traffic_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:background="@drawable/grey_button_drawable"
        android:layout_marginBottom="@dimen/button_8dp_padding"
        android:text="@string/obtain_traffic_info_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/car_number_input"
        app:layout_constraintTop_toBottomOf="@id/car_number_input" />

</android.support.constraint.ConstraintLayout>